--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@myriaddreamin/typst-ts-web-compiler": "^0.7.0-rc2",
     "@myriaddreamin/typst.ts": "^0.7.0-rc2",
     "codemirror": "^6.0.2",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "pdf.js": "^0.1.0",
     "pdfjs-dist": "^5.4.530",
