--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@myriaddreamin/typst-ts-renderer": "^0.7.0-rc2",
     "@myriaddreamin/typst-ts-web-compiler": "^0.7.0-rc2",
     "@myriaddreamin/typst.ts": "^0.7.0-rc2",
-    "codemirror": "^6.0.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "pdf.js": "^0.1.0",
@@ -28,6 +27,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "shiki": "^3.20.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
